syntax = "proto3";

option go_package = ".;recurringpb";

package entity;

import "google/protobuf/timestamp.proto";

message SavedCard {
  // @inject_tag: json:"id"
  string id = 1;
  string token = 2;
  string project_id = 3;
  string merchant_id = 4;
  // @inject_tag: json:"pan"
  string masked_pan = 5;
  string card_holder = 6;
  // @inject_tag: json:"expire"
  CardExpire expire = 7;
  string recurring_id = 8;
  bool is_active = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message CardExpire {
  // @inject_tag: json:"month"
  string month = 1;
  // @inject_tag: json:"year"
  string year = 2;
}