syntax = "proto3";
option go_package = "github.com/paysuper/paysuper-proto/paysuper-reporter";
package proto;

import "google/protobuf/timestamp.proto";

service ReporterService {
    rpc CreateFile (ReportFile) returns (CreateFileResponse) {}
}

message CreateFileResponse {
    // @inject_tag: json:"status"
    int32 status = 1;
    // @inject_tag: json:"message,omitempty"
    ResponseErrorMessage message = 2;
    // @inject_tag: json:"file_id"
    string file_id = 3;
}

message ResponseErrorMessage {
    //@inject_tag: json:"code"
    string code = 1;
    //@inject_tag: json:"message"
    string message = 2;
    //@inject_tag: json:"details,omitempty"
    string details = 3;
}

message ReportFile {
    //@inject_tag: json:"id" bson:"_id"
    string id = 1;
    // @inject_tag: json:"user_id" validate:"required,hexadecimal,len=24"
    string user_id = 2;
    // @inject_tag: json:"merchant_id" validate:"required,hexadecimal,len=24"
    string merchant_id = 3;
    // @inject_tag: json:"report_type" validate:"required,alpha"
    string report_type = 4;
    // @inject_tag: json:"file_type" validate:"required,alpha"
    string file_type = 5;
    // @inject_tag: json:"params"
    bytes params = 6;
    // @inject_tag: json:"template" validate:"omitempty,hexadecimal"
    string template = 7;
    // @inject_tag: json:"retention_time"
    int32 retention_time = 8;
    // @inject_tag: json:"send_notification"
    bool send_notification = 9;
    // @inject_tag: json:"created_at"
    google.protobuf.Timestamp created_at = 10;
}

message PostProcessRequest {
    ReportFile report_file = 1;
    string file_name = 2;
    int64 retention_time = 3;
    bytes file = 4;
}
